# pneumonia-mnist-cv-messy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/data/: get_data.py
src/models/: cnn.py
src/train/: eval.py  train.py
src/utils/: stuff.py
tests/: test_imports.py
