[project]
name = "pneumonia-mnist-cv-messy"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "torch>=2.0",
    "torchvision>=0.15",
    "scikit-learn>=1.3",
    "medmnist>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]